setup-scripts/04-oda-canvas/ORIG/component-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  annotations:
    meta.helm.sh/release-name: canvas
    meta.helm.sh/release-namespace: canvas
  labels:
    app.kubernetes.io/managed-by: Helm
  name: component-gateway
  namespace: components
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - '*'
    port:
      name: http
      number: 80
      protocol: HTTP
